[package]
name = "vmess"
version = "0.1.0"
authors = ["Dan Aloni"]
edition = "2021"

[dependencies]
chrono = "0.4"
config = "0.10"
dirs = "4"
fern = { version = "0.6", features = ["colored"]}
fstrings = "0.2"
indexmap = "1.7"
lazy_static = "1.4"
log = "0.4"
prettytable-rs = "0.10"
regex = "1.4"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
structopt = "0.3"
tempdir = "0.3"
thiserror = "1"
users = "0.11"
uuid = { version = "0.8", features = ["v4"] }
xmltree = "0.10"
lalrpop-util = { version = "0.20", features = ["lexer"] }
strum = "0.17.1"
strum_macros = "0.17.1"
byte-unit = "4"

[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer"] }
